--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<p>🎊A very <strong>Happy Birthday🎂🎊</strong></p>
 				<p>always smile and be happy😊.....</p>
 				<p>This sweet girl....💗</p>
-				<p>Will always remain my favourite😊>3</p>
+				<p>Will always remain my favourite😊<3</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
